# rl-intro

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy_gh_pages.yaml  test-python.yml
examples/: experiment.ipynb  multi_agent_experiment.py  multi_seed_experiment.py  single_experiment.py
rl_intro/agent/: agent_expected_sarsa.py  agent_q.py  agent_q_learning.py  agent_sarsa.py  agent_types.py  core.py  factory.py  policy.py
rl_intro/environment/: core.py  environment_types.py  factory.py  gridworld.py
rl_intro/evaluation/: analyze.py  data_handling.py  parse.py  plot.py
rl_intro/simulation/: experiment.py
rl_intro/utils/: logger.py  math.py  visualize.py
tests/: test_agent_expected_sarsa.py  test_agent_q_learning.py  test_agent_sarsa.py  test_gridworld.py  test_policy.py  test_utils.py
web/: .gitignore  agent-config.js  constants.js  grid-world.js  gridworld.js  gridworld_view.js  index.html  package-lock.json  package.json  plot.js  py-interface.js  pyodide.js  script.js  styles.css  svelte.config.js  vite.config.js
web-svelte/: package-lock.json  package.json
web-svelte/py/: rl_intro-0.1.1-py3-none-any.whl  simulation.py
web-svelte/src/: app.css  app.html
web-svelte/src/lib/: AgentConfig.svelte  CodeBlock.svelte  ConfigExperiment.svelte  ControlsSpeed.svelte  Grid.svelte  GridControls.svelte  Latex.svelte  ModeToggle.svelte  Navbar.svelte  Plots.svelte  Simulation.svelte  SimulationControls.svelte  plot.js  (+3 more)
web/py/: simulation.py
web/src/: app.css  app.html
web_svelte/: .gitignore  package-lock.json  package.json
(+32 files in other folders)
