[project]
name = "rl_intro"
version = "0.1.0"
description = "Introduction to Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.0",
    "pytest>=8.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
