[project]
name = "rl_intro"
version = "0.1.0"
description = "Introduction to Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy<=2.0.2",
    "pandas<=2.2.3",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rl_intro*"]

[tool.uv]
package = true